主项目向module中传值

--- a/moduleMain/src/main/res/layout/modulemain_fragment_module_a.xml
+++ b/moduleMain/src/main/res/layout/modulemain_fragment_module_a.xml
@@ -4,10 +4,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <ImageView
-            android:id="@+id/imageView"
+    <RelativeLayout android:layout_width="match_parent"
+                    android:background="#000000"
+                    android:layout_height="40dp">
+
+        <TextView android:layout_width="wrap_content"
+                  android:textSize="16sp"
+                  android:text="主Module"
+                  android:textColor="#ffffff"
+                  android:gravity="center"
+                  android:layout_marginLeft="20dp"
+                  android:layout_height="match_parent"/>
+    </RelativeLayout>
+    <TextView
+            android:id="@+id/userName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@mipmap/ic_launcher"/>
+            android:text="用户名:"
+            android:textSize="23sp"
+            android:layout_height="wrap_content"/>
+    <TextView
+            android:id="@+id/userToken"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/userName"
+            android:gravity="center"
+            android:textSize="23sp"
+            android:text="token:"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"/>
 </RelativeLayout>
