--- a/app/src/main/res/layout/demo.xml
+++ b/app/src/main/res/layout/demo.xml
@@ -8,6 +8,7 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_above="@+id/textView"
+            android:background="@color/colorAccent"
             android:layout_height="match_parent"/>
     <TextView
             android:id="@+id/textView"
@@ -15,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:gravity="center"
-            android:text="调到mainModule"
+            android:text="加载mainModule的内容"
             android:layout_alignParentBottom="true"
             android:textSize="23sp"/>
 </RelativeLayout>
